check url encodings, type as token search param, excemption for Encounter.type